--- a/TestService/DemoService.csproj
+++ b/TestService/DemoService.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{A9D807B7-8496-4A9F-8309-2708F10C431B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestService</RootNamespace>
-    <AssemblyName>TestService</AssemblyName>
+    <RootNamespace>DemoService</RootNamespace>
+    <AssemblyName>DemoService</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
