--- a/WindowsServiceHelper/ServiceProcess.Helpers.csproj
+++ b/WindowsServiceHelper/ServiceProcess.Helpers.csproj
@@ -103,6 +103,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="ServiceProcess.Helpers.nuspec">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Page Include="App.xaml">
